[project]
name = "pcmol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy==1.24.4",
    "pandas>=2.1.0",
    "papyrus-structure-pipeline>=0.0.5",
    "rdkit>=2025.9.1",
    "torch==2.2.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]
